# BudgetTracker

./: .gitignore  docker-compose-prod.yml  docker-compose.yml
deployments/: auth-service.yaml  (+6 more)
services/auth/: Dockerfile.prod  entrypoint.sh  pyproject.toml  requirements.txt
services/auth/migrations/versions/: 5459730712f4_.py
services/auth/project/: __init__.py  config.py
services/auth/project/apis/: __init__.py  models.py
services/auth/project/apis/auth/: auth.py  utils.py
services/auth/project/apis/ping/: api.py
services/auth/project/apis/users/: crud.py
services/transaction/: .coveragerc  .gitignore  Dockerfile.prod  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
services/transaction/migrations/versions/: 475b589348ff_initial_migrations.py  86554dfa950a_.py  9694faf7782e_added_account_owner_column_to_account_.py  adfc784f4f2e_.py  cd9107b53b39_added_account_and_account_transfer.py  f4fb221fdb7d_changed_column_cost_to_amount.py
services/transaction/project/: __init__.py  config.py
services/transaction/project/api/: __init__.py  alive.py  decorator.py  models.py  utils.py
services/transaction/project/api/accounts/: crud.py  views.py
services/transaction/project/api/accounts_transafer/: crud.py  utils.py  views.py
services/transaction/project/api/summary/: utils.py  views.py
services/transaction/project/api/transaction_categories/: views.py
services/transaction/project/tests/: conftest.py  test_alive.py  test_category.py  test_decorator.py
services/transaction/tests/: test_alive.py  test_category.py  test_config.py
(+100 files in other folders)
