[tool.poetry]
name = "auth"
version = "0.1.0"
description = "Authentication service for canmesh.com"
authors = ["simon.islam <simon.islam@brilliant.com.bd>"]
license = "CanMesh.com"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Bcrypt = "^0.7.1"
Flask-Cors = "^3.0.10"
flask-redis = "^0.4.0"
flask-restx = "^0.5.1"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.3.0"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
